--- a/photo.html
+++ b/photo.html
@@ -36,12 +36,6 @@
                     <a href="ustavsnt.html">Устав</a>
                 </li>
                 <li>
-                    <a href="sobranie.html">Собрание</a>
-                </li>
-                <li>
-                    <a href="#">Контакты</a>
-                </li>
-                <li>
                     <a href="employees.html">Сотрудники</a>
                 </li>
                 <li>
@@ -50,14 +44,11 @@
                 <li>
                     <a href="photo.html">Фото</a>
                 </li>
-                <li>
-                    <a href="#">Имущество СНТ</a>
-                </li>
             </div>
         </div>
         <div class="header-top-wrapper">
             <div class="header-contact">
-                <div class="time-work">Пн.-Сб. 9:30 -18:00</div>
+
                 <a href="mailto:SNT-politechnick@mail.ru" class="email">SNT-politechnick@mail.ru</a>
             </div>
 
@@ -71,12 +62,6 @@
                     <li class="menu-item">
                         <a href="ustavsnt.html" class="menu-list">Устав</a>
                     </li>
-                    <li class="menu-item">
-                        <a href="sobranie.html" class="menu-list">Собрание</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#" class="menu-list">Контакты</a>
-                    </li>
                 </ul>
                 <nav class="nav">
                     <button class="dropdown-toggle">Ещё</button>
@@ -88,14 +73,12 @@
                             <a href="report.html">Отчеты</a>
                         </li>
                         <li>
-                            <a href="#">Объявлени</a>
+                            <a href="#">Объявления</a>
                         </li>
                         <li>
                             <a href="photo.html">Фото</a>
                         </li>
-                        <li>
-                            <a href="#">Имущество СНТ</a>
-                        </li>
+
                     </ul>
                 </nav>
             </div>
@@ -114,7 +97,21 @@
     <div class="call">
         <a href="tel:+79192440097" class="call-phone">Председатель</a>
     </div>
-    <button class="reqvisits">Реквизиты</button>
+    <button data-modal class="reqvisits">Реквизиты</button>
+</div>
+
+<div class="reqvisits-modal hide">
+    <div class="reqvisits-wrapper">
+        <button data-close class="reqvisits-close">&times;</button>
+        <p class="reqvisits-text">СНТ "ПОЛИТЕХНИК"</p>
+        <p class="reqvisits-text">Расчётный счёт: 40703810613000001241</p>
+        <p class="reqvisits-text">Банк: ЦЕНТРАЛЬНО-ЧЕРНОЗЕМНЫЙ БАНК ПАО СБЕРБАНК</p>
+        <p class="reqvisits-text">БИК: 042007681</p>
+        <p class="reqvisits-text">Кор. Cчёт: 30101810­600000000681</p>
+        <p class="reqvisits-text">ОГРН: 1033600040100</p>
+        <p class="reqvisits-text">ИНН: 3625002864</p>
+        <p class="reqvisits-text">КПП: 362501001</p>
+    </div>
 </div>
 <section class="photo">
     <div class="container">
@@ -136,9 +133,6 @@
                 <img src="images/slider/5.jpg" alt="галерея" class="photo-img">
             </div>
             <div class="photo-item">
-                <img src="images/slider/6.jpg" alt="галерея" class="photo-img">
-            </div>
-            <div class="photo-item">
                 <img src="images/slider/7.jpg" alt="галерея" class="photo-img">
             </div>
             <div class="photo-item">
@@ -155,15 +149,60 @@
 </section>
 
 
-<section class="form">
 
-</section>
 <footer class="footer">
     <div class="container">
+        <div class="footer-inner">
+            <div class="footer-info">
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <a href="/" class="footer-link">
+                            <img src="images/icons/tree_footer_fff.svg" alt="logo">
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="mailto:SNT-politechnick@mail.ru" class="footer-email">SNT-politechnick@mail.ru</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="plan.html" class="footer-link">Воронежская обл., Рамонский р-н,<br> Тер Снт Политехник</a>
+                    </li>
+                    <li class="footer-item">
+                        <div class="time-work">Пн.-Сб. 9:30 -18:00</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-menu">
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <a class="footer-link" href="plan.html">План СНТ</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="ustavsnt.html">Устав</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-items">
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <a class="footer-link" href="employees.html">Сотрудники</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="report.html">Отчеты</a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link" href="photo.html">Фото</a>
+                    </li>
+                </ul>
+            </div>
 
+        </div>
     </div>
 </footer>
 <script src="js/main.js"></script>
+<script src="js/modal.js"></script>
 
 </body>
 
